--- a/template.html
+++ b/template.html
@@ -14,19 +14,17 @@
 			<nav id="menu-top">
 				<a href="template1psl.html">Pictures</a>
 				<a href="template2psl.html">Our Story</a>
-				<a href="template3psl.html">Important Links</a>
-			</nav>
+				</nav>
 		</header>
 		
 		<main>
-			<nav id="menu-side">
-				<a href="">.NET</a>
+			<nav id="menu-side"></nav>
 				<a href="">HTML</a>
 				<a href="">SQL</a>
 				<a href="">Javascript</a>
 			</nav>
 			<h2>Main Text</h2>
-			<p>Content</p>
+			<p>turinyss</p>
 		</main>
 		
 		<footer>
