--- a/exaple.html
+++ b/exaple.html
@@ -4,6 +4,7 @@
 		<title>Nice name</title>
 			<meta charset="utf-8">
 	</head>
+	<img src="img/Capture.PNG">
 	<body>
 			<a href="#pabaiga">puslapio pabaiga</a>
 		<h1 id="pradzia">Gražus pasaulis</h1>
