--- a/template.html
+++ b/template.html
@@ -11,10 +11,10 @@
 		<header>
 			<h1 id="up">Logo</h1>
 			<p>Welcome to my world!</p>
+			<img src="img/Capture.PNG">
 			<nav id="menu-top">
 				<a href="template1psl.html">Pictures</a>
-				<a href="template2psl.html">Our Story</a>
-				</nav>
+						</nav>
 		</header>
 		
 		<main>
