--- a/template2psl.html
+++ b/template2psl.html
@@ -8,24 +8,36 @@
 		}
 
 		body {
-			background-color: aqua;
+			background-color: lemonchiffon;
 			margin: 20;
 			padding: 30;
 		}
 
 		h1 {
-			background-color: blueviolet;
-			padding: 10;
+			background-color: wheat;
+			padding: 20px;
 			border: 2px solid black;
+			text-transform: capitalize;
 		}
 
 		h2 {
 			color: darkred;
+			border: 2px double black;
+			background-color: thistle;
+			padding-left: 20px;
+			margin-bottom: 0;
 
 		}
 
 		div {
-			background-color: greenyellow;
+			background-color: wheat;
+			padding: 0;
+			margin: 0;
+			border: 2px solid black;
+			padding: 10px;
+		}
+		p{
+			
 		}
 	</style>
 	<title>My Bit By Bit</title>
@@ -119,14 +131,21 @@
 		</p>
 	</div>
 	<h2> Šešta pastraipa</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-		standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-		a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-		remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-		Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-		of Lorem Ipsum.
+	<div>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+			industry's
+			standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+			make
+			a type specimen book. It has survived not only five centuries, but also the leap into electronic
+			typesetting,
+			remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+			containing
+			Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+			versions
+			of Lorem Ipsum.
 
-	</p>
+		</p>
+	</div>
 	<p>
 		<a href="#pradzia">I pradžia</a></p>
 
