--- a/template2psl.html
+++ b/template2psl.html
@@ -9,8 +9,8 @@
 
 		body {
 			background-color: lemonchiffon;
-			margin: 20px;
-			
+			padding: 20px;
+
 		}
 
 		h1 {
@@ -31,25 +31,33 @@
 
 		div {
 			background-color: wheat;
-			padding: 0;
-			margin: 0;
-			border: 2px solid black;
 			padding: 10px;
-		}
-		p{
+			border: 2px solid black;
 			
 		}
-		a:link, a:visited {
+
+		p {
+			margin: 0px;
+
+			padding-top: 0px;
+			padding-right: 30px;
+		}
+
+		a:link,
+		a:visited {
 			color: darkslategrey;
 			text-transform: uppercase;
 			padding: 10px;
 			text-decoration-style: double;
-			{
-			a:hover, a:active {
-				color: green;
+
+				{
+
+				a:hover,
+				a:active {
+					color: green;
+				}
+
 			}
-			
-		}
 	</style>
 	<title>My Bit By Bit</title>
 	<meta charset="utf-8">
@@ -65,7 +73,9 @@
 			atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
 			sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
 			facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
-			impedit quo minus id quod maxime placeat<a href="https://www.w3schools.com/css/tryit.asp?filename=trycss_inline-block_span1">pirmasis puslapis</a> facere possimus, omnis voluptas assumenda est, omnis dolor
+			impedit quo minus id quod maxime placeat<a
+				href="https://www.w3schools.com/css/tryit.asp?filename=trycss_inline-block_span1">pirmasis puslapis</a>
+			facere possimus, omnis voluptas assumenda est, omnis dolor
 			repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
 			voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus,
 			ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
@@ -79,7 +89,8 @@
 			because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter
 			consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain
 			pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can
-			procure him some great pleasure. <a href="template.html">Pradžia</a>To take a trivial example, which of us ever undertakes laborious physical
+			procure him some great pleasure. <a href="template.html">Pradžia</a>To take a trivial example, which of us
+			ever undertakes laborious physical
 			exercise, except to obtain some advantage from it? But who has any right to find fault with a man who
 			chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no
 			resultant pleasure?"
@@ -157,8 +168,10 @@
 
 		</p>
 	</div>
-	<p>
-		<a href="#">I pradžia</a></p>
+	<footer>
+		<p><a href="#">Go up</a></p>
+		<p>MyBitByBit Site &copy; 2021 All rights reserved.</p>
+	</footer>
 
 </body>
 
