--- a/template2psl.html
+++ b/template2psl.html
@@ -10,7 +10,7 @@
 		body {
 			background-color: lemonchiffon;
 			padding: 20px;
-
+			margin: 20px;
 		}
 
 		h1 {
@@ -22,20 +22,22 @@
 
 		h2 {
 			color: darkred;
-			border: 2px double black;
+			border-style: solid;
+			border-color: black;
 			background-color: thistle;
 			padding-left: 20px;
 			margin-bottom: 0;
-
 		}
 
 		div {
 			background-color: wheat;
-			padding: 10px;
-			border: 2px solid black;
-			
+			padding: 0px;
+			margin: 0px;
 		}
-
+div div {
+	border-color:  darkslategrey;
+	border-style: none solid solid solid;
+}
 		p {
 			margin: 0px;
 
@@ -67,18 +69,25 @@
 	<header>
 		<h1>Theoretical knowledge</h1>
 	</header>
-	<h2 id="pradzia"> Pirma pastraipa</h2>
 	<div>
-		<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-			atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
-			sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
-			facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
-			impedit quo minus id quod maxime placeat<a
-				href="https://www.w3schools.com/css/tryit.asp?filename=trycss_inline-block_span1">pirmasis puslapis</a>
-			facere possimus, omnis voluptas assumenda est, omnis dolor
-			repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
-			voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus,
-			ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+		<h2 id="pradzia"> Pirma pastraipa</h2>
+		<div>
+			<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+				atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+				similique
+				sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
+				facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
+				impedit quo minus id quod maxime placeat<a
+					href="https://www.w3schools.com/css/tryit.asp?filename=trycss_inline-block_span1">pirmasis
+					puslapis</a>
+				facere possimus, omnis voluptas assumenda est, omnis dolor
+				repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+				ut et
+				voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente
+				delectus,
+				ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+			</p>
+		</div>
 	</div>
 
 	<h2> Antra pastraipa</h2>
